# deep-reviewer

./: .dockerignore  .gitignore  Dockerfile  PROGRAM.md  README.md  app.py  app_models.py  main.py  models.py  pyproject.toml  telemetry.py  utils.py
.github/workflows/: deploy.yml
agent/: __init__.py  claude_tools.py  config_models.py  default_agents.py  runner.py  runtime.py  task_models.py
notebooks/: review_playground.ipynb
prompts/: orchestrator.py
tests/: test_agent_models.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: main.ts  styles.css
