[project]
name = "deep-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.56",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
