[project]
name = "deep-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "braintrust>=0.12.1",
    "claude-agent-sdk>=0.1.56",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "posthog>=7.9.12",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
